--- a/views/home.erb
+++ b/views/home.erb
@@ -25,17 +25,14 @@
        top: 0;
        z-index: 2;
      }
-     #map { height: 580px; }
+     #map { height: 1000px; }
      #status {
        text-align: center;
        font-family: Helvetica;
        font-weight: bold;
        color: white;
-       text-shadow:
-         -3px -3px 0 #000,
-         3px -3px 0 #000,
-         -3px 3px 0 #000,
-         3px 3px 0 #000;
+       background: rgba(0, 0, 0, 0.2);
+       padding: 3px
      }
    </style>
 </head>
