--- a/views/home.erb
+++ b/views/home.erb
@@ -76,5 +76,15 @@
       map.panTo(coordinates);
     })
    </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-41044915-1', 'whereisfoca.com');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
