--- a/views/home.erb
+++ b/views/home.erb
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
   <![endif]-->
    <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
-   <script src="http://fgnass.github.io/spin.js/dist/spin.min.js"></script>
+   <script src="http://fgnass.github.io/spin.js/spin.min.js"></script>
    <script src="/js/leaflet.spin.js"></script>
    <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
    <style type="text/css">
