--- a/views/home.erb
+++ b/views/home.erb
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
     <![endif]-->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="http://leaflet-extras.github.io/leaflet-providers/leaflet-providers.js"></script>
     <script src="http://fgnass.github.io/spin.js/spin.min.js"></script>
     <script src="/js/leaflet.spin.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
@@ -55,13 +56,10 @@
     <div id="map"></div>
     <script type="text/javascript">
       var map = L.map('map').setView([-34.905944, -56.191556], 13);
-      L.tileLayer('http://{s}.tile.cloudmade.com/{key}/{style}/256/{z}/{x}/{y}.png', {
-        maxZoom: 18,
-        key: "5e4aa7d8c5f1438db2fd0bf17efae7da",
-        style: 997
-      }).addTo(map);
+      L.tileLayer.provider('Stamen.Watercolor').addTo(map);
 
       var layer = L.geoJson(null).addTo(map);
+
       layer.fire('data:loading');
 
       $.getJSON("/where", function(data) {
